# facegazine-scraper

./: README.md  dbconfig.py  main.py  pyproject.toml
